# usb-rom

./: .gitignore  CMakeLists.txt  Makefile  README.md  extern.h  main.c  msc_disk.c  usb_descriptors.c
boards/: vccgnd_yd_rp2040.h
mkimage/: mkfat-linux.sh  mkfat-macos.sh  mkimage.sh  mkiso-linux.sh  mkiso-macos.sh
